package com.pluralsight.deli;

import com.pluralsight.deli.controller.UI;

public class Main {
    public static void main(String[] args) {
        UI ui = new UI();
        ui.display();
    }
}
