package com.pluralsight.deli.model.enums;

public enum BreadType {
    WHITE,
    WHEAT,
    RYE,
    WRAP

}
