package com.pluralsight.deli.model.enums;

public enum DrinkSize {
    SMALL,
    MEDIUM,
    LARGE

}
