package com.pluralsight.deli.model.enums;

public enum SandwichSize {
    SMALL,
    MEDIUM,
    LARGE
}
