package com.pluralsight.deli.service.interfaces;

import com.pluralsight.deli.model.Chips;

public interface ChipService {
    Chips selectChips();
}
